# GooseSLURM

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .readthedocsenv.yml  CMakeLists.txt  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  pre-commit.yml  pythonpublish.yml
GooseSLURM/: __init__.py  _version.py  cli_Gdel.py  cli_Ginfo.py  cli_Gps.py  cli_Gstat.py  cli_Gsub.py  data.py  duration.py  fileio.py  files.py  memory.py  output.py  ps.py  rich.py  sacct.py  scripts.py  sinfo.py  squeue.py  table.py  time.py
GooseSLURM/cli/: Gchecksync.py  Gdel.py  Ginfo.py  Gps.py  Gscript.py  Gstat.py  Gsub.py
docs/: Makefile  buffer.rst  changelog.rst  cheat-sheet.rst  cluster.rst  conda.rst  conf.py  copy.rst  getting.rst  index.rst  linux.rst  linux_bash.rst  python.rst  scripts.rst  tips.rst
docs/examples/json_log/: job.slurm  readme.rst  writeJob.py
docs/examples/parallel/: job.slurm.out  readme.rst  writeJob.py
docs/examples/tempdir/: job.slurm  readme.rst  writeJob.py
docs/images/: cluster.idraw
dummyslurm/: pyproject.toml  setup.py
dummyslurm/dummyslurm/: __init__.py  sacct_-l_-j_1.txt
examples/heavy-io/: heavy-io.slurm
examples/json_log/: README.md  job.slurm
examples/parallel/: README.md  job.slurm
examples/scratch/: scratch.slurm  scratch.slurm.json
examples/tempdir/: README.md  job.slurm  job.slurm.json  job.slurm.out  tempdir.slurm  tempdir.slurm.error  tempdir.slurm.json
tests/: Gdel.py  Gsub.py  test_Gdel.py  test_Gsub.py  test_duration.py
