[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["numpy", "click", "tqdm", "PyYAML"]
description = "Support functions for SLURM"
dynamic = ["version"]
name = "GooseSLURM"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Gdel = "GooseSLURM.cli.Gdel:main"
Ginfo = "GooseSLURM.cli.Ginfo:main"
Gps = "GooseSLURM.cli.Gps:main"
Gstat = "GooseSLURM.cli.Gstat:main"
Gsub = "GooseSLURM.cli.Gsub:main"
Gacct = "GooseSLURM.sacct:_Gacct_catch"

[project.urls]
Source = "https://github.com/tdegeus/GooseSLURM"

[tool.setuptools_scm]
write_to = "GooseSLURM/_version.py"
