[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["numpy", "click", "tqdm", "PyYAML"]
description = "Support functions for SLURM"
dynamic = ["version"]
name = "GooseSLURM"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Gacct = "GooseSLURM.sacct:_Gacct_catch"
Gdel = "GooseSLURM.cli_Gdel:main"
Ginfo = "GooseSLURM.cli_Ginfo:main"
Gps = "GooseSLURM.cli_Gps:main"
Gstat = "GooseSLURM.cli_Gstat:main"
Gsub = "GooseSLURM.cli_Gsub:main"

[project.urls]
Source = "https://github.com/tdegeus/GooseSLURM"

[tool.setuptools.packages.find]
include = ["GooseSLURM"]

[tool.setuptools_scm]
write_to = "GooseSLURM/_version.py"
